# CubeSandbox

.github/workflows/: build-vmlinux.yml  release-one-click.yml
CubeAPI/: Cargo.toml
CubeAPI/src/: routes.rs
CubeAPI/src/handlers/: terminal.rs
CubeAPI/src/models/: mod.rs  terminal.rs
CubeMaster/pkg/base/config/: config.go
CubeMaster/pkg/server/: server.go
CubeMaster/pkg/service/httpservice/cube/: template_commit.go  template_commit_test.go
CubeMaster/pkg/templatecenter/: template_commit.go  template_commit_test.go  template_image.go  template_image_test.go
configs/single-node/: cubemaster.yaml
deploy/one-click/: env.example  install.sh
docs/guide/: webui.md
docs/guide/integrations/: claude-code.md  index.md
docs/zh/guide/: webui.md
docs/zh/guide/integrations/: claude-code.md  index.md
mcp-server/: .gitignore  README.md  pyproject.toml
mcp-server/src/mcp_cubesandbox/: __init__.py  _sandbox_manager.py  server.py
mcp-server/tests/: test_server.py
web/: package-lock.json  package.json  vite.config.ts
web/src/components/terminal/: Terminal.tsx  TerminalPanel.tsx
web/src/hooks/: useTerminal.ts
web/src/locales/en/: sandboxDetail.json  sandboxes.json
web/src/locales/zh/: sandboxDetail.json  sandboxes.json
web/src/pages/: SandboxDetail.tsx  Sandboxes.tsx
web/src/types/: terminal.ts
